[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/sauro.png" type="Texture" id=1]
[ext_resource path="res://scripts/Amigo_sauro.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.49999
height = 9.00001

[node name="Amigo_sauro" type="KinematicBody2D" groups=["companheiro"]]
collision_layer = 16
collision_mask = 512
script = ExtResource( 2 )

[node name="Sauro" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 9 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="pular_plataforma" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( -7.24792e-05, 20 )
collision_mask = 512

[node name="pular_abismo" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 14 )
collision_mask = 512

[node name="peh_0" type="RayCast2D" parent="."]
position = Vector2( 5.5, 12.5 )
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 512

[node name="peh_1" type="RayCast2D" parent="."]
position = Vector2( -10, 12.5 )
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 512

[node name="sela" type="Position2D" parent="."]
position = Vector2( 0, -3.5 )
scale = Vector2( 0.5, 0.2 )
